--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -9,4 +9,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    border: none;
+    box-shadow: none;
+    transition: none;
 }
