Renderização de página de acordo com request e catch em user not found

--- a/src/routes/Main/Search/styles.css
+++ b/src/routes/Main/Search/styles.css
@@ -10,7 +10,7 @@
     background-color: var(--de3-color-bg-search);
 }
 
-.de3-search-container h1 {
+.de3-search h1 {
     font-size: 38px;
     color: var(--de3-color-font-primary);
     font-weight: 500;
