--- a/src/routes/Main/Search/styles.css
+++ b/src/routes/Main/Search/styles.css
@@ -24,4 +24,10 @@
     font-size: 16px;
     width: 298px;
     margin-bottom: 24px;
+    border: none;
+    border-radius: 4px;
+}
+
+.de3-search-container input::placeholder {
+    color: var(--de3-color-font-placeholder)
 }
